<resources>
    <string name="app_name">My First Application</string>
    <string name="result">Result</string>
    <string name="number">Number</string>
    <string name="text_0">0</string>
    <string name="text_1">1</string>
    <string name="text_2">2</string>
    <string name="text_3">3</string>
    <string name="text_4">4</string>
    <string name="text_5">5</string>
    <string name="text_6">6</string>
    <string name="text_7">7</string>
    <string name="text_8">8</string>
    <string name="text_9">9</string>
    <string name="text_plus">+</string>
    <string name="text_minus">-</string>
    <string name="text_mult">*</string>
    <string name="text_div">/</string>
    <string name="text_root">√</string>
    <string name="text_back">1/x</string>
    <string name="text_point">.</string>
    <string name="text_equal">=</string>
    <string name="text_clear">clear</string>
    <string name="text_change">±</string>
    <string name="text_procent">%</string>
</resources>